--- a/style.css
+++ b/style.css
@@ -146,7 +146,7 @@ nav{
 .rect{
     position: absolute !important;
     left: 700px !important;
-    top: 3700px !important;
+    top: 3800px !important;
 }
 .my{
     margin-top: 170px;
@@ -197,7 +197,7 @@ nav{
     height: 33vh !important;
     width: 550px !important;
     right: 330px !important;
-    top: 5330px !important;
+    top: 5450px !important;
     padding: 25px;
 }
 .naira{
@@ -359,7 +359,7 @@ nav{
         left: 630px !important;
         top: 4350px !important;
     }
-    .copy{
+    .corp{
         padding-left: 13px !important;
     }
     .nav-link{
@@ -379,81 +379,6 @@ nav{
     }
 }
 
-@media(max-width: 768px){
-    .pic{
-        height: 40vh !important;
-    }
-    .title{
-        position: absolute !important;
-        height: 20vh !important;
-        width: 550px !important;
-        right: 100px !important;
-        top: 6100px !important;
-    }
-    .draw{
-        width: 420px !important;
-        height: 500px !important;
-    }
-    .path{
-        width: 80% !important;
-    }
-    .dami{
-        width: 80% !important;
-    }
-    .tool{
-        width: 300% !important;
-    }
-    .torm{
-        bottom:139px !important;
-        right: -1px !important;
-        width: 60% !important;
-    }
-    .torms{
-        bottom: 117px !important;
-        right: -4px !important;
-        width: 60% !important;
-    }
-    .rect{
-        position: absolute !important;
-        left: 470px !important;
-        top: 4280px !important;
-    }
-    .africa{
-        width: 250px !important; 
-        height: 1000px !important;
-        padding-top: 350px !important;
-    }
-    .top{
-        text-align: center !important;
-        font-size: 25px !important;
-        margin-top: -80px;
-    }
-    .lean{
-        font-size: 20px !important;
-    }
-    .dev{
-        margin-left: 30px !important;
-        color: black !important;
-    }
-    .nav-link{
-        margin-right: 0px !important;
-    }
-    .section1{
-        height: 50vh !important; 
-        background: url('img/angle.png')center !important;
-        background-size: cover!important;
-    }
-    .vector{
-       padding-top: 30% !important;
-       padding-left: 45% !important;
-    }
-    .corp{
-        padding-left: 13px !important;
-    }
-    .copy{
-        margin-top: 160px;
-    }
-}
 
 @media(max-width: 576px){
     .navbar-nav{
@@ -607,3 +532,110 @@ nav{
         margin-bottom: 10px;
     }
 }  
+
+@media(max-width: 768px){
+    .pic{
+        height: 40vh !important;
+    }
+    .title{
+        position: absolute !important;
+        height: 20vh !important;
+        width: 550px !important;
+        right: 100px !important;
+        top: 6100px !important;
+    }
+    .draw{
+        width: 420px !important;
+        height: 500px !important;
+    }
+    .path{
+        width: 80% !important;
+    }
+    .dami{
+        width: 80% !important;
+    }
+    .tool{
+        width: 20% !important;
+    }
+    .torm{
+        bottom:139px !important;
+        right: -1px !important;
+        width: 10% !important;
+    }
+    .torms{
+        bottom: 117px !important;
+        right: -4px !important;
+        width: 10% !important;
+    }
+    .rect{
+        position: absolute !important;
+        left: 470px !important;
+        top: 4280px !important;
+    }
+    .africa{
+        width: 250px !important; 
+        height: 1000px !important;
+        padding-top: 350px !important;
+    }
+    .top{
+        text-align: center !important;
+        font-size: 25px !important;
+        margin-top: -80px;
+    }
+    .lean{
+        font-size: 20px !important;
+    }
+    .dev{
+        margin-left: 30px !important;
+        color: black !important;
+    }
+    .nav-link{
+        margin-right: 0px !important;
+    }
+    .section1{
+        height: 50vh !important; 
+        background: url('img/angle.png')center !important;
+        background-size: cover!important;
+    }
+    .vector{
+       padding-top: 30% !important;
+       padding-left: 45% !important;
+    }
+    .corp{
+        padding-left: 13px !important;
+    }
+    .copy{
+        margin-top: 160px;
+    }
+}
+
+@media(max-width: 670px){
+    .title{
+        width: 350px !important;
+        right: 10px !important;
+        top: 11350px !important;
+        height: 42vh !important;
+    }
+    .pic{
+        height: 400px !important;
+    }
+    .copy{
+        margin-top: 30px;
+    }
+    nav{
+        height: 55px;
+    }
+    .navbar-nav{
+        padding: 20px;
+    }
+    .africa{
+        padding-top: 0px !important;
+        width: 310px !important;
+        height: 400px !important;
+    }
+    .draw{
+        height: 300px !important;
+        padding-left: 0px;
+        width: 100% !important;
+    }
+}
