--- a/style.css
+++ b/style.css
@@ -146,7 +146,7 @@ nav{
 .rect{
     position: absolute !important;
     left: 700px !important;
-    top: 3800px !important;
+    top: 3670px !important;
 }
 .my{
     margin-top: 170px;
@@ -197,7 +197,7 @@ nav{
     height: 33vh !important;
     width: 550px !important;
     right: 330px !important;
-    top: 5450px !important;
+    top: 5350px !important;
     padding: 25px;
 }
 .naira{
@@ -267,7 +267,7 @@ nav{
     margin-bottom: 60px;
 }
 .lean{
-    font-size: small;
+    font-size: small !important;
 }
 .new{
     font-size: 15px;
@@ -287,7 +287,7 @@ nav{
         height: 15vh !important;
         width: 550px !important;
         right: 200px !important;
-        top: 5950px !important;
+        top: 5840px !important;
     }
     .draw{
         width: 545px !important;
@@ -357,7 +357,7 @@ nav{
     .rect{
         position: absolute !important;
         left: 630px !important;
-        top: 4350px !important;
+        top: 4270px !important;
     }
     .corp{
         padding-left: 13px !important;
@@ -371,7 +371,7 @@ nav{
         margin-right: 10px;
     }
     .fleet{
-        left: 255px !important;
+        left: 235px !important;
         bottom: 36px;
     }
     nav{
@@ -446,11 +446,10 @@ nav{
     .learn{
         color: rgba(0, 33, 71, 0.9);
         font-size: 20px;
-        padding-left: 60px;
+        justify-content: center;
     }
     .lean{
         font-size: small !important;
-        text-align: center;
     }
     .cardos{
         margin-top: 0px;
@@ -610,14 +609,68 @@ nav{
 }
 
 @media(max-width: 670px){
+    .research{
+        font-size: 15px;
+    }
+    .intro{
+        font-size: x-small !important;
+        margin-bottom: 5px !important;
+    }
+    .intros{
+        font-size: x-small !important;
+        margin-bottom: 5px !important;
+    }
+    .star{
+        font-size: x-small !important;
+        padding-left:25px !important;
+    }
+    .naira{
+        font-size: x-small !important;
+        padding-left: 15px !important;
+    }
+    .none{
+        padding: 0px !important;
+    }
+    .border{
+        border: none !important;
+        padding: 0px !important;
+    }
+    .come{
+        text-align: left !important;
+    }
+    .btn-get{
+        border-radius: 5px;
+        padding-left: 10px;
+        padding-right: 10px;
+        font-size: 10px;
+        margin-top: 20px;
+        color: black;
+    }
+    .find{
+        width: 120%;
+    }
+    .master{
+        font-size: 15px;
+        text-align: left !important;
+    }
+    .angle{
+        width: 50px;
+        height: 200px;
+    }
+    .mid{
+        padding-top: 30px !important;
+        width: 60px;
+        height: 210px;
+        padding-right: 10px;
+    }
     .title{
         width: 350px !important;
         right: 10px !important;
-        top: 11350px !important;
-        height: 42vh !important;
+        top: 6250px !important;
+        height: 37vh !important;
     }
     .pic{
-        height: 400px !important;
+        height: 470px !important;
     }
     .copy{
         margin-top: 30px;
@@ -638,4 +691,145 @@ nav{
         padding-left: 0px;
         width: 100% !important;
     }
+    .button{
+        margin-left: 140px;
+    }
+    .fleet{
+        top: 119px;
+        left: 55px !important;
+    }
 }
+
+/* @media(max-width: 720px){
+    .navbar-nav{
+        background: #002147;
+        padding: 20px;
+    }
+    .intro{
+        font-size: 20px !important;
+    }
+    .intros{
+        font-size: 20px !important;
+    }
+    .star{
+        font-size: 20px !important;
+        padding-left: 50px;
+    }
+    .naira{
+        font-size: 20px !important;
+    }
+    .angle{
+        width: 60px;
+        height: 250px;
+    }
+    .mid{
+        padding-top: 30px !important;
+        width: 70px;
+        height: 270px;
+        padding-right: 10px;
+    }
+    .border{
+        border: none !important;
+        padding: 0px !important;
+    }
+    .find{
+        width: 150%;
+    }
+    .come{
+        padding-top: 30px;
+        margin-right: 90px;
+    }
+    .master{
+        font-size: 25px;
+        text-align: left !important;
+    }
+    .pic{
+        height: 30vh !important;
+        margin-top: 200px;
+    }
+    .title{
+        position: absolute !important;
+        height: 20vh !important;
+        width: 550px !important;
+        right: 90px !important;
+        top: 8200px !important;
+    }
+    .land{
+        width: 30%;
+    }
+    .draw{
+        width: 515px !important;
+        height: 300px !important;
+        padding-left: 0px;
+    }
+    .path{
+        width: 80% !important;
+    }
+    .dami{
+        width: 80% !important;
+    }
+    .tool{
+        width: 20% !important;
+    }
+    .torm{
+        bottom:139px !important;
+        right: -1px !important;
+        width: 10% !important;
+    }
+    .torms{
+        bottom: 117px !important;
+        right: -4px !important;
+        width: 10% !important;
+    }
+    .rect{
+        position: absolute !important;
+        left: 470px !important;
+        top: 4280px !important;
+    }
+    .africa{
+        width: 500px !important; 
+        height: 500px !important;
+        padding-top: 20px !important;
+    }
+    .top{
+        text-align: center !important;
+        font-size: 25px !important;
+        margin-top: -80px;
+    }
+    .lean{
+        font-size: 20px !important;
+    }
+    .dev{
+        margin-left: 30px !important;
+        color: black !important;
+    }
+    .nav-link{
+        margin-right: 0px !important;
+    }
+    .section1{
+        height: 40vh !important; 
+        background: url('img/angle.png')center !important;
+        background-size: cover!important;
+    }
+    .vector{
+       padding-top: 40% !important;
+       padding-left: 45% !important;
+    }
+    .corp{
+        padding-left: 13px !important;
+    }
+    .copy{
+        margin-top: 160px;
+    }
+    .section4{
+        padding-top: 30px;
+        height:1300px;
+    }
+    .comp{
+        margin-bottom: 10px !important; 
+    }
+    .button{
+        margin-left: 140px;
+        width: 20%;
+    }
+}   */
